--- a/scripts/cloudformation/samTemplate.yaml
+++ b/scripts/cloudformation/samTemplate.yaml
@@ -9,6 +9,9 @@ Parameters:
   LambdaRoleArn:
     Type: String
     Description: Lambda role ARN to be used for all lambdas
+  StateMachineARN:
+    Type: String
+    Description: Lambda role ARN to be used for all lambdas
 Resources:
   UploadToS3Lambda:
     Type: AWS::Serverless::Function
@@ -34,6 +37,103 @@ Resources:
       CodeUri: ../../lambdas/clean-s3-data/clean-s3-data.zip
       Role: !Ref LambdaRoleArn
       FunctionName: clean-s3-data
+      Timeout: 120
+      MemorySize: 128
+      Environment:
+        Variables:
+          Author: !Ref Author
+      Tags:
+        project: aws-serverless-demo
+        type: lambda
+  StartStepFunc:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: nodejs6.10
+      CodeUri: ../../lambdas/start-step-func/start-step-func.zip
+      Role: !Ref LambdaRoleArn
+      FunctionName: start-step-func
+      Timeout: 120
+      MemorySize: 128
+      Environment:
+        Variables:
+          Author: !Ref Author
+          STATE_MACHINE_ARN: !Ref StateMachineARN
+      Tags:
+        project: aws-serverless-demo
+        type: lambda
+  EvalUpload:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: nodejs6.10
+      CodeUri: ../../lambdas/eval-upload/eval-upload.zip
+      Role: !Ref LambdaRoleArn
+      FunctionName: eval-upload
+      Timeout: 120
+      MemorySize: 128
+      Environment:
+        Variables:
+          Author: !Ref Author
+      Tags:
+        project: aws-serverless-demo
+        type: lambda
+  ProcessJpg:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: nodejs6.10
+      CodeUri: ../../lambdas/process-jpg/process-jpg.zip
+      Role: !Ref LambdaRoleArn
+      FunctionName: process-jpg
+      Timeout: 120
+      MemorySize: 128
+      Environment:
+        Variables:
+          Author: !Ref Author
+      Tags:
+        project: aws-serverless-demo
+        type: lambda
+  ProcessPng:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: nodejs6.10
+      CodeUri: ../../lambdas/process-png/process-png.zip
+      Role: !Ref LambdaRoleArn
+      FunctionName: process-png
+      Timeout: 120
+      MemorySize: 128
+      Environment:
+        Variables:
+          Author: !Ref Author
+      Tags:
+        project: aws-serverless-demo
+        type: lambda
+  ProcessGif:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: nodejs6.10
+      CodeUri: ../../lambdas/process-gif/process-gif.zip
+      Role: !Ref LambdaRoleArn
+      FunctionName: process-gif
+      Timeout: 120
+      MemorySize: 128
+      Environment:
+        Variables:
+          Author: !Ref Author
+      Tags:
+        project: aws-serverless-demo
+        type: lambda
+  DoCleanup:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: nodejs6.10
+      CodeUri: ../../lambdas/post-process-cleanup/post-process-cleanup.zip
+      Role: !Ref LambdaRoleArn
+      FunctionName: post-process-cleanup
       Timeout: 120
       MemorySize: 128
       Environment:
