--- a/buildspec_node.yml
+++ b/buildspec_node.yml
@@ -14,7 +14,7 @@ phases:
     commands:
       - echo Build completed on `date`
       - cd $HOME_DIR/scripts/cloudformation/
-      - aws cloudformation package --debug --template-file samTemplate.yaml --s3-bucket aws-serverless-builds --output-template-file aws-serverless-cfn-template.yaml
+      - aws cloudformation package --debug --template-file samTemplate.yaml --s3-bucket test-codepipeline-addadadfssdddf --output-template-file aws-serverless-cfn-template.yaml
 cache:
   paths:
     - '/root/.npm/**/*'
